fixed footer, fixed main menu overflow. fixed todo not working on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -482,12 +482,15 @@ body {
 
 .language.label {}
 
-.transition-fade {
-    transition: 0.4s;
-    opacity: 1;
-  }
-  
-  html.is-animating .transition-fade {
-    opacity: 0;
-  }
+.footer{
+    margin: auto;
+    width: 50%;
+    text-align: center;
+    padding: 2em;
+    padding-top: 5em;
+    
+}
+.footer-kaks{
+    letter-spacing: 5px;
+}
   
